[package]
name = "raygun"
version = "0.1.0"
authors = ["Trent Clarke <trent.clarke@gmail.com>"]

[dependencies]
argparse = "0.2.1"
downcast = "0.9.1"
float-cmp = "0.2.5"
image = "0.18.0"
liquid = "0.14.1"
log = "0.4.1"
rayon = "0.9.0"
simplelog = "0.4.4"

[dependencies.nom]
version = "3.2.0"
# features = ["verbose-errors"]

[profile.test]
opt-level = 0
debug = true
