[package]
name = "raygun"
version = "0.1.0"
edition = "2018"
authors = ["Trent Clarke <trent.clarke@gmail.com>"]

[dependencies]
argparse = "0.2"
downcast = "0.10"
float-cmp = "0.5"
image = "0.22"
liquid = "0.19"
log = "0.4"
rayon = "1.2"
simplelog = "0.7"

[dependencies.nom]
version = "5.0"
# features = ["verbose-errors"]

[profile.test]
opt-level = 0
debug = true
