[package]
name = "raygun"
version = "0.1.0"
edition = "2018"
authors = ["Trent Clarke <trent.clarke@gmail.com>"]

[dependencies]
argparse = "0.2"
downcast = "0.10"
float-cmp = "0.8"
image = "0.23"
liquid = "0.20"
log = "0.4"
nom = { version="5.1" }
rayon = "1.3"
simplelog = "0.8"

[profile.test]
opt-level = 0
debug = true
