[package]
name = "raygun-primitives"
version = "0.1.0"
authors = ["Trent Clarke <trent.clarke@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
downcast = "0.10"
log = "0.4"
raygun-math = { path="../raygun-math" }
raygun-material = { path="../raygun-material" }