[package]
name = "raygun-scenefile"
version = "0.1.0"
authors = ["Trent Clarke <trent.clarke@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
liquid = "0.20"
log = "0.4"
nom = { version="5" }
raygun-camera = { path="../../lib/raygun-camera" }
raygun-material = { path="../../lib/raygun-material" }
raygun-math = { path="../../lib/raygun-math" }
raygun-primitives = { path="../../lib/raygun-primitives" }
raygun-scene = { path="../../lib/raygun-scene" }


[dev-dependencies]
float-cmp = "0.8"